<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"
        tools:layout_editor_absoluteX="19dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInBoxName"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/cajaNombre"
            android:textColorHint="@color/blue_sea"
            android:textSize="16sp"
            app:cornerRadius="60sp"
            android:layout_margin="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInMailBox"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/cajaCorreo"
            android:textColorHint="@color/blue_sea"
            android:textSize="16sp"
            app:cornerRadius="60sp"
            android:layout_margin="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInPassBox"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/passwordBox"
            android:inputType="textPassword"
            android:textColorHint="@color/blue_sea"
            android:textSize="16sp"
            app:cornerRadius="60sp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:padding="8dp"
                android:text="Selecciona una opción:"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/whatRoleIs"
                android:layout_width="288dp"
                android:layout_height="107dp"
                android:layout_margin="10dp">

                <RadioButton
                    android:id="@+id/roleIsCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Cliente" />

                <RadioButton
                    android:id="@+id/roleIsAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Administrador" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/botonRegistroS"
            android:layout_width="301dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/crea_una_cuenta"
            android:textSize="16sp"
            app:cornerRadius="32sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>