<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.442"
            tools:layout_editor_absoluteX="19dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/icono_perfil" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBoxName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:backgroundTint="?attr/colorPrimary"
                android:hint="@string/nameBox"
                android:textColorHint="?attr/colorSecondary"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"
                app:cornerRadius="60sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBoxMail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="?attr/colorPrimary"
                android:hint="@string/cajaCorreo"
                android:textColorHint="?attr/colorSecondary"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"
                app:cornerRadius="60sp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="?attr/colorPrimary"
                android:hint="@string/passwordBox"
                android:inputType="textPassword"
                android:textColorHint="?attr/colorSecondary"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"
                app:cornerRadius="60sp"
                android:layout_margin="10dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassBoxBis"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/passwordBoxBis"
                android:inputType="textPassword"
                android:backgroundTint="?attr/colorPrimary"
                android:textColorHint="?attr/colorSecondary"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"
                app:cornerRadius="60sp"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/updateProfileBtn"
                android:layout_width="150dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:background="?attr/colorPrimaryVariant"
                android:text="@string/updateInfo"
                android:textSize="16sp"
                app:cornerRadius="32sp" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_menu"
            android:name="com.edix.grupo02_codigo_control_de_acceso.MenuFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout="@layout/fragment_menu" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>